fix iOs dark mode - add white background

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -1,5 +1,6 @@
 html {
-  font-family: Arial,Helvetica,Sans,Sans-Serif,Sans Serif;
+  background: #FFFFFF;
+  font-family: Arial, Helvetica, Sans, Sans-Serif, Sans Serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
